package io.hedwig.dp.demos.structural.adapter;

/**
 * 1. author: patrick
 */
public class QuickSort implements Sorter{

  @Override
  public void sort(int[] source) {
    System.out.println("quick sort!");
  }
}
