package io.hedwig.dp.demos.structural.adapter;

/**
 * 1. author: patrick
 */
public interface RankingOperation {
  public void sort(int[] source);
  public void preSort(int[] source);
}
